--- a/src/Home/TEST7.css
+++ b/src/Home/TEST7.css
@@ -1,4 +1,4 @@
-.label-sheet {
+/* .label-sheet {
   display: grid;
   grid-template-columns: repeat(4, 48.3mm); 
   grid-template-rows: repeat(11, 25.4mm);  
@@ -6,19 +6,17 @@
   row-gap: 0mm;
   width: 210mm;
   height: 297mm;
-   padding: 10mm 8.4mm 0 8.4mm;
+  padding: 8.8mm 8.4mm;
   box-sizing: border-box;
   page-break-after: always;
 }
 
-
-
 .label {
   border: 1px solid #ccc;
-  padding: 1mm;
+  padding: 2mm;
   box-sizing: border-box;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   font-family: Arial, sans-serif;
@@ -28,9 +26,8 @@
 }
 
 .label svg {
-  width: 20mm !important;
-  height: 19mm !important;
-  margin-right: 1px;
+  width: 24mm !important;
+  height: 20mm !important;
 }
 
 .label input {
@@ -41,48 +38,12 @@
   text-align: center;
 }
 
-.code-text-code{
-  font-size:11px;
-  text-align: center;
-  font-weight: bold;
-}
-
-.code-text1 {
-  font-size: 10px;
-  text-align: center;
-  
-}
-.code-text-box {
-  padding-right: 3px;
- 
-}
-
-.color-controls {
-  
-  margin-top: 10px;
-}
-
- .home4-container  {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-} 
-
-.note {
-  font-size: 12px;
-  color: #666;
-  text-align: center;
-  margin-top: 5px;
-}
-
-
-
 @media print {
   body {
     margin: 0;
   }
 
-  button, h1, label, input,h6 {
+  button, h1, label, input {
     display: none;
   }
 
@@ -93,7 +54,7 @@
 
   .label-sheet {
     margin: 0;
-    padding: 10mm 8.4mm 0 8.4mm;
+    padding: 9mm 8.4mm 0 8.4mm;
   }
 
   .label {
@@ -101,24 +62,9 @@
     page-break-inside: avoid;
   }
 
-
-  .color-controls {
-  
-  margin-top: 0px;
-}
-
- .home4-container  {
-
-  flex-direction: none;
-  align-items: none;
-} 
-
-
-  
-
   .page-footer {
     display: block;
   }
 }
 
-/**  **/
+ */
